fix: md screen alignment of selected item icons

--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@
   } */
 
   .card {
-    @apply relative w-max md:w-full mx-4 mt-4 bg-base-100 shadow-md rounded-lg duration-300 hover:scale-105 hover:shadow-xl md:card-side last:mb-4
+    @apply relative w-max md:max-w-full mx-4 mt-4 bg-base-100 shadow-md rounded-lg duration-300 hover:scale-105 hover:shadow-xl md:card-side last:mb-4
   }
 
   .card__subheader {
